--- a/listen.css
+++ b/listen.css
@@ -164,15 +164,15 @@ footer a:hover {
 @keyframes "pulse" {
  0% {
     transform: scale(1);
-    opacity: 0.25;
+    opacity: 0.0;
  }
  25% {
     transform: scale(1);
-    opacity: 0.5;
+    opacity: 0.25;
  }
  50% {
     transform: scale(1);
-    opacity: 1.0;
+    opacity: .50;
  }
  75% {
     transform: scale(1);
@@ -180,7 +180,7 @@ footer a:hover {
  }
  100% {
     transform: scale(1);
-    opacity: 0.0;
+    opacity: 1.0;
  }
 }
 @-webkit-keyframes "pulse" {
