--- a/listen.css
+++ b/listen.css
@@ -345,7 +345,7 @@ footer a:hover {
     font-weight: 900;
 }
 .block-6 span {
-    font-family: "playfair display";
+    font-family: 'Nixie One', cursive;
     font-weight: 400;
     font-style: italic;
     font-size: 1em;
@@ -361,6 +361,7 @@ footer a:hover {
     top: 70%;
     right: 10%;
     text-align: right;
+    padding-right: 1%;
 }
 .block-6:hover .p2 {
 	/* opacity: 1.0;
